# GenAI-productivity-tools

./: .gitignore  ARCHITECTURE.md  README.md  TECHNICAL_DOCS.md
mcp-client/: README.md  langgraph_client.py  pyproject.toml
web-ui/: README.md  TECHNICAL.md  pyproject.toml
web-ui/backend/: config.py  main.py
web-ui/backend/models/: schemas.py
web-ui/backend/routers/: chat.py  summaries.py
web-ui/backend/services/: agent.py  knowledge_base.py
web-ui/frontend/: index.html
web-ui/frontend/css/: styles.css
web-ui/frontend/js/: app.js  chat.js  highlights.js  summaries.js  summarize.js
youtube-summarizer/: instructions.md  pyproject.toml  server.py
youtube-summarizer/knowledge_youtube/: AI_vs_Human_Developers_Why_Automation_Isnt_Replacing_Coders_Anytime_Soon.md  Ashin_The_Trader_From_IT_Engineer_To_Trading_Success_Summary.md  Autonomous_research_agent_problems.md  Bill Gates on Privilege, Curiosity, and the 1000-Hour Coding Rule - The Big Interview with Steven Levy (S1EdnZAlqQA).md  Is_the_AI_Bubble_Popping_Summary.md  Perplexity CEO: Building Search to Compete with Google.md  Ray_Dalio_On_Wealth_Money_and_India_Summary.md  The_Mind_Behind_OpenClaw_Personal_AI_Agents_and_the_End_of_Apps.md  WTF_Fund_Bootcamp_Stories_and_Startups_Unplugged.md  angel_bold_conversations_summary.md
youtube-summarizer/knowledge_youtube/business/: Andrew_Ng_AI_Landscape_Market_India_Strategy.md  Building_Indias_Next_Consumer_Electronics_Giant_Summary.md  How_a_Builder_Drives_Nearly_1_Million_Visits_With_Free_Tools_Summary.md  How_to_Really_Get_Ahead_Financially_Summary.md  (+4 more)
(+7 files in other folders)
